added useful comment

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <main id="app">
      
         <h2 class="welcome-message columns small-12 text-center"> {{ carName }}</h2>
-        
+        <!-- grabbing all fields seaprately of my model -->
             <div class="row small-12">    
                 <p class="columns small-3">Model: </p><label class="columns small-9">{{cardata.car_model}}</label>
             </div>
